--- a/source/dialogs/curve-comparison/curve-comparison-modal.html
+++ b/source/dialogs/curve-comparison/curve-comparison-modal.html
@@ -11,9 +11,10 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3"> Select well:</label>
                         <div class="col-sm-9">
-                            <select ng-model="wiModal.wellModel.id"
-                                    class="form-control wi-form-control"
-                                    ng-options="well.id as well.properties.name for well in wiModal.wells">
+                            <select class="form-control wi-form-control"
+                                    ng-model="wiModal.idWell"
+                                    ng-options="well.id as well.properties.name for well in wiModal.wells"
+                                    ng-change="wiModal.selectedWell(wiModal.idWell)">
                             </select>
                         </div>
                     </div>
@@ -30,35 +31,31 @@
                                    type="number" class="form-control wi-form-control" step="any">
                         </div>
                         <div class="col-sm-2">
-                            <button class="btn btn-default"
+                            <button class="btn btn-default small-button"
                                     ng-click="wiModal.defaultDepth()">Default</button>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-1">
-                            <input type="checkbox" class="form-control wi-form-control" ng-model="checked">
+                            <input type="checkbox" class="input-check" ng-model="wiModal.checked" ng-change="wiModal.disable(wiModal.checked)">
                         </div>
                         <label for="" class="control-label col-sm-2"> Use zone</label>
                     </div>
                     <div class="form-group">
-                        <div>
+                        <div ng-style="wiModal.style">
                             <label for="" class="col-sm-2 control-label">Parameter</label>
                             <div class="col-sm-4">
-                                <select ng-disabled="!checked"
-                                        class="form-control wi-form-control"
+                                <select class="form-control wi-form-control"
                                 >
                                 </select>
                             </div>
                             <label for="" class="col-sm-2 control-label">Zone set</label>
                             <div class="col-sm-4">
-                                <select ng-disabled="!checked"
-                                        class="form-control wi-form-control"
+                                <select class="form-control wi-form-control"
                                 >
                                 </select>
                             </div>
-                        </div>
-                        <div>
-                            <table class="table table-bordered">
+                            <table class="table availableCurve">
                                 <thead>
                                 <tr>
                                     <th></th>
@@ -69,7 +66,7 @@
                                     <th>Use</th>
                                 </tr>
                                 </thead>
-                                <tbody>
+                                <tbody style="height: 10em;">
 
                                 </tbody>
                             </table>
@@ -77,59 +74,34 @@
                     </div>
                     <h5 class="modal-infomation-title">Curve Comparison</h5>
                     <div class="form-group">
-                        <table class="table table-bordered">
-                            <thead>
+                        <table class="table availableCurve">
+                            <thead style="display: block">
                             <tr>
+                                <th style="width: 25%">Curve 1</th>
+                                <th style="width: 25%">Curve 2</th>
+                                <th style="width: 25%">Difference</th>
+                                <th style="width: 25%">Correlation</th>
                                 <th></th>
-                                <th>Curve 1</th>
-                                <th>Curve 2</th>
-                                <th>Difference</th>
-                                <th>Correlation</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>
-                                </td>
-                                <td>
-                                    <select
-                                            class="wi-select-control"
-                                    >
+                            <tbody style="display: block; height: 10em; overflow-y: auto">
+                            <tr ng-repeat="curve in wiModal.curves">
+                                <td style="width: 25%">
+                                    <select class="form-control wi-select-control"
+                                            ng-model="wiModal.idCurve"
+                                            ng-options="cur.id as cur.name for cur in wiModal.curves"
+                                            ng-change="wiModal.selectedCurve(wiModal.idCurve)">
                                     </select>
                                 </td>
-                                <td>
-                                    <select
-                                            class="wi-select-control"
-                                    >
+                                <td style="width: 25%">
+                                    <select class="form-control wi-select-control"
+                                            ng-model="wiModal.curves"
+                                            ng-options="cur.id as cur.name for cur in wiModal.curves">
                                     </select>
                                 </td>
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                            </tr>
-                            <tr>
+                                <td style="width: 25%"></td>
+                                <td style="width: 25%"></td>
                                 <td></td>
-                                <td>
-                                    <select
-                                            class="wi-select-control"
-                                    >
-                                    </select>
-                                </td>
-                                <td>
-                                    <select
-                                            class="wi-select-control"
-                                    >
-                                    </select>
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
                             </tr>
                             </tbody>
                         </table>
@@ -137,7 +109,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="run-16x16"></span>Run</button>
+                <button class='btn btn-default' ng-click='wiModal.onRunButtonClicked()'><span class="run-16x16"></span>Run</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>Close</button>
             </div>
         </div>
