add ui-select to curve-convolution

--- a/source/dialogs/curve-convolution/curve-convolution-modal.html
+++ b/source/dialogs/curve-convolution/curve-convolution-modal.html
@@ -17,13 +17,30 @@
                     <div class="form-group">
                         <label class="col-sm-6">Input Curve:</label>
                         <div class="col-sm-6">
-                            <select class="form-control wi-form-control" ng-model="wiModal.inputIdCurve" ng-options="curve.id as curve.properties.name for curve in wiModal.curvesArr"></select>
+                            <ui-select ng-model="wiModal.inputCurve"
+                            ng-change="wiModal.onSelectCurveChange()"
+                            class="normal-text">
+                            <ui-select-match placeholder='Select a curve'>{{wiModal.inputCurve.properties.name}}</ui-select-match>
+                            <ui-select-choices group-by="'datasetName'"
+                            repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
+                                <div class="padding-left-20px">{{curve.properties.name}}</div>
+                            </ui-select-choices>
+                        </ui-select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-6">Standard Curve:</label>
                         <div class="col-sm-6">
-                                <select class="form-control wi-form-control" ng-model="wiModal.stdIdCurve" ng-options="curve.id as curve.properties.name for curve in wiModal.curvesArr"></select>
+                            <ui-select ng-model="wiModal.stdCurve"
+                            ng-change="wiModal.onSelectCurveChange()"
+                            class="normal-text">
+                            <ui-select-match placeholder='Select a curve'>
+                                {{wiModal.stdCurve.properties.name}}</ui-select-match>
+                            <ui-select-choices group-by="'datasetName'"
+                            repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
+                                <div class="padding-left-20px">{{curve.properties.name}}</div>
+                            </ui-select-choices>
+                        </ui-select>
                         </div>
                     </div>
                     <h5 class="modal-infomation-title">Output</h5>
