--- a/source/dialogs/curve-derivative/curve-derivative-modal.html
+++ b/source/dialogs/curve-derivative/curve-derivative-modal.html
@@ -1,9 +1,9 @@
 <div class="modal fade">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
-                <h4><span class="curve-convolution-16x16"></span>&nbsp;Curve Derivative</h4>
+                <h4><span class="curve-edit-16x16"></span>&nbsp;Curve Derivative</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
@@ -14,7 +14,9 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Select well</label>
                                     <div class="col-sm-4">
-                                        <select class="form-control wi-form-control" ng-model="wiModal.selectedWell" ng-options="well as well.properties.name for well in wiModal.wells" ng-change="wiModal.onWellChange()">
+                                        <select class="form-control wi-form-control" ng-model="wiModal.selectedWell"
+                                               ng-options="well as well.properties.name for well in wiModal.wells "
+                                               ng-change="wiModal.onWellChange()">
                                        </select>
                                     </div>
                                     <label class="col-sm-2">Input Curve</label>
@@ -37,7 +39,7 @@
                                         <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any">
                                     </div>
                                     <div class="col-sm-2">
-                                        <button class="btn btn-default small-button" ng-click="wiModal.clickDefault()"style="with=100%;">Default</button>
+                                        <button class="btn btn-default small-button" ng-click="wiModal.clickDefault()"style="width=100%;">Default</button>
                                     </div>
                                 </div>
                             </div>
@@ -48,7 +50,7 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Dataset</label>
                                     <div class="col-sm-4">
-                                        <select class="form-control wi-form-control" ng-options="dataset as dataset.properties.name for dataset in wiModal.datasets"
+                                        <select class="form-control wi-form-control" ng-options="dataset.id as dataset.properties.name for dataset in wiModal.datasets"
                                                  ng-model="wiModal.selectedDataset">
                                         </select>
                                     </div>
@@ -56,17 +58,18 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Firt derivative</label>
                                     <div class="col-sm-4">
-                                        <input class="form-control wi-form-control">
+                                        <wi-custom-input type='curve' model='wiModal.firtCurve' options='wiModal.curves'></wi-custom-input>
                                     </div>
                                 </div>
                                 <div class='form-group'>
                                     <label class="col-sm-2">Second derivative</label>
                                     <div class="col-sm-4">
-                                        <input class="form-control wi-form-control">
+                                            <wi-custom-input type='curve' model='wiModal.secondCurve'
+                                               options='wiModal.curves' disabled="!wiModal.checked"></wi-custom-input>
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="checkbox">
-                                            <label><input type="checkbox" value="">Output second derivative</label>
+                                            <label><input type="checkbox" ng-model="wiModal.checked" >Output second derivative</label>
                                         </div>
                                     </div>
                                 </div>
@@ -76,7 +79,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.run()'><span class="run-16x16"></span>&nbsp;Run</button>
+                <button class='btn btn-default' ng-click='wiModal.run()' ng-disabled="wiModal.validate();"><span class="run-16x16"></span>&nbsp;Run</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Close</button>
             </div>
         </div>
