--- a/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
+++ b/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
-                <h4><span class="curve-convolution-16x16"></span>&nbsp;Fill Gaps</h4>
+                <h4><span class="curve-fill-data-gaps-16x16"></span>&nbsp;Fill Gaps</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
