--- a/source/html/index.html
+++ b/source/html/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Well Insight App</title>
+    <link rel="shortcut icon" href="img/icon/Well_Insight.ico" type="image/x-icon">
 
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
