update curve resccle

--- a/source/dialogs/curve-rescale/curve-rescale-modal.html
+++ b/source/dialogs/curve-rescale/curve-rescale-modal.html
@@ -110,12 +110,12 @@
                     <div class="form-group margin-bottom-0_3em">
                         <label for="" class="control-label col-sm-2 padding-right-0"> Left scale</label>
                         <div class="col-sm-4">
-                            <input type="text" class="form-control wi-form-control"
+                            <input type="number" class="form-control wi-form-control"
                                     ng-model="wiModal.outputObj.leftScale">
                         </div>
                         <label for="" class="control-label col-sm-2 padding-right-0"> Right scale</label>
                         <div class="col-sm-4">
-                            <input type="text" class="form-control wi-form-control"
+                            <input type="number" class="form-control wi-form-control"
                                     ng-model="wiModal.outputObj.rightScale">
                         </div>
                     </div>
